src/styles/global.css
/* ... */
/* latin */
@font-face {
  font-family: "Ubuntu Mono";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: local("Ubuntu Mono"), local("UbuntuMono-Regular"), url(https://fonts.gstatic.com/s/ubuntumono/v9/KFOjCneDtsqEr0keqCMhbCc6CsQ.woff2) format("woff2");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* cyrillic-ext */
@font-face {
  font-family: "Ubuntu Mono";
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: local("Ubuntu Mono Bold"), local("UbuntuMono-Bold"), url(https://fonts.gstatic.com/s/ubuntumono/v9/KFO-CneDtsqEr0keqCMhbC-BL9H4tY12eg.woff2) format("woff2");
  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
}
/* cyrillic */
@font-face {
  font-family: "Ubuntu Mono";
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: local("Ubuntu Mono Bold"), local("UbuntuMono-Bold"), url(https://fonts.gstatic.com/s/ubuntumono/v9/KFO-CneDtsqEr0keqCMhbC-BL9HxtY12eg.woff2) format("woff2");
  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}
/* greek-ext */
@font-face {
  font-family: "Ubuntu Mono";
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: local("Ubuntu Mono Bold"), local("UbuntuMono-Bold"), url(https://fonts.gstatic.com/s/ubuntumono/v9/KFO-CneDtsqEr0keqCMhbC-BL9H5tY12eg.woff2) format("woff2");
  unicode-range: U+1F00-1FFF;
}
/* greek */
@font-face {
  font-family: "Ubuntu Mono";
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: local("Ubuntu Mono Bold"), local("UbuntuMono-Bold"), url(https://fonts.gstatic.com/s/ubuntumono/v9/KFO-CneDtsqEr0keqCMhbC-BL9H2tY12eg.woff2) format("woff2");
  unicode-range: U+0370-03FF;
}
/* latin-ext */
@font-face {
  font-family: "Ubuntu Mono";
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: local("Ubuntu Mono Bold"), local("UbuntuMono-Bold"), url(https://fonts.gstatic.com/s/ubuntumono/v9/KFO-CneDtsqEr0keqCMhbC-BL9H7tY12eg.woff2) format("woff2");
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: "Ubuntu Mono";
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: local("Ubuntu Mono Bold"), local("UbuntuMono-Bold"), url(https://fonts.gstatic.com/s/ubuntumono/v9/KFO-CneDtsqEr0keqCMhbC-BL9H1tY0.woff2) format("woff2");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
* {
  -webkit-transition: background-color 75ms ease-in, border-color 75ms ease-in;
  -moz-transition: background-color 75ms ease-in, border-color 75ms ease-in;
  -ms-transition: background-color 75ms ease-in, border-color 75ms ease-in;
  -o-transition: background-color 75ms ease-in, border-color 75ms ease-in;
  transition: background-color 75ms ease-in, border-color 75ms ease-in;
}

.notransition {
  -webkit-transition: none;
  -moz-transition: none;
  -ms-transition: none;
  -o-transition: none;
  transition: none;
}

html {
  overflow-x: hidden;
  width: 100%;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
hr,
dl,
dd,
ol,
ul,
figure {
  margin: 0;
  padding: 0;
}

body {
  min-height: 100vh;
  overflow-x: hidden;
  position: relative;
  color: #434648;
  background: linear-gradient(135deg, #faf9f6 0%, #f5f3ef 100%);
  background-attachment: fixed;
  font: 400 17px/1.7 Roboto, sans-serif;
  -webkit-text-size-adjust: 100%;
  -webkit-font-smoothing: antialiased;
  -webkit-font-feature-settings: "kern" 1;
  -moz-font-feature-settings: "kern" 1;
  -o-font-feature-settings: "kern" 1;
  font-feature-settings: "kern" 1;
  font-kerning: normal;
  box-sizing: border-box;
  padding-top: env(safe-area-inset-top, 0px);
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
ul,
ol,
dl,
figure {
  margin-top: 10px;
  margin-bottom: 10px;
}

strong,
b {
  font-weight: 700;
  color: #0d122b;
}

hr {
  border-bottom: 0;
  border-style: solid;
  border-color: #ececec;
}

kbd {
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border: 1px solid #ececec;
  border-radius: 2px;
  color: #0d122b;
  display: inline-block;
  font-size: 14px;
  line-height: 1.4;
  font-family: Consolas, monospace;
  margin: 0 0.1em;
  font-weight: 700;
  padding: 0.01em 0.4em;
  text-shadow: 0 1px 0 #fff;
}

img {
  max-width: 100%;
  vertical-align: middle;
  -webkit-user-drag: none;
  margin: 0 auto;
  text-align: center;
}

figure {
  position: relative;
}

figure > img {
  display: block;
  position: relative;
}

figcaption {
  font-size: 13px;
  text-align: center;
}

ul {
  list-style: none;
}
ul li {
  display: list-item;
  text-align: -webkit-match-parent;
}
ul li::before {
  content: "﹣";
  display: inline-block;
  top: -1px;
  width: 1.2em;
  position: relative;
  margin-left: -1.3em;
  font-weight: 700;
}

ol {
  list-style: none;
  counter-reset: li;
}
ol li {
  position: relative;
  counter-increment: li;
}
ol li::before {
  content: counter(li);
  display: inline-block;
  width: 1em;
  margin-right: 0.5em;
  margin-left: -1.6em;
  text-align: right;
  direction: rtl;
  font-weight: 700;
  font-size: 14px;
}

ul,
ol {
  margin-top: 0;
  margin-left: 30px;
}

li {
  padding-bottom: 1px;
  padding-top: 1px;
}
li:before {
  color: #0d122b;
}
li > ul,
li > ol {
  margin-bottom: 2px;
  margin-top: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #0d122b;
  font-weight: 700;
}
h1 + ul, h1 + ol,
h2 + ul,
h2 + ol,
h3 + ul,
h3 + ol,
h4 + ul,
h4 + ol,
h5 + ul,
h5 + ol,
h6 + ul,
h6 + ol {
  margin-top: 10px;
}
@media screen and (max-width: 768px) {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    scroll-margin-top: 65px;
  }
}

h1 > a,
h2 > a,
h3 > a,
h4 > a,
h5 > a,
h6 > a {
  text-decoration: none;
  border: none;
}
/* ... */

